fix: prose math overflow

--- a/src/css/prose.css
+++ b/src/css/prose.css
@@ -178,7 +178,7 @@
 }
 
 .prose .math {
-  @apply max-w-full;
+  @apply max-w-full inline-block overflow-x-scroll overdflow-y-hidden;
 }
 
 .prose .katex {
